# app/Http/Controllers/API/Vendor/AuthController.php
@@ -283,10 +283,10 @@ use Illuminate\Support\Facades\Hash;
      *     @OA\MediaType(
      *       mediaType="multipart/form-data",
      *       @OA\Schema(
-     *          required={"forget_token","password","password_confirmed"},
+     *          required={"forget_token","password","password_confirmation"},
      *         @OA\Property(property="forget_token", type="string", example=""),
      *         @OA\Property(property="password", type="string", example=""),
-     *         @OA\Property(property="password_confirmed", type="string", example=""),
+     *         @OA\Property(property="password_confirmation", type="string", example=""),
      *       ),
      *     ),
      *  ),
