# storage/api-docs/api-docs.json
@@ -390,7 +390,7 @@
                                 "required": [
                                     "forget_token",
                                     "password",
-                                    "password_confirmed"
+                                    "password_confirmation"
                                 ],
                                 "properties": {
                                     "forget_token": {
@@ -401,7 +401,7 @@
                                         "type": "string",
                                         "example": ""
                                     },
-                                    "password_confirmed": {
+                                    "password_confirmation": {
                                         "type": "string",
                                         "example": ""
                                     }
@@ -2032,7 +2032,7 @@
                                 "required": [
                                     "old_password",
                                     "new_password",
-                                    "new_password_confirmed"
+                                    "new_password_confirmation"
                                 ],
                                 "properties": {
                                     "old_password": {
@@ -2043,7 +2043,7 @@
                                         "type": "string",
                                         "example": ""
                                     },
-                                    "password_confirmed": {
+                                    "new_password_confirmation": {
                                         "type": "string",
                                         "example": ""
                                     }
@@ -3134,7 +3134,7 @@
                                 "required": [
                                     "forget_token",
                                     "password",
-                                    "password_confirmed"
+                                    "password_confirmation"
                                 ],
                                 "properties": {
                                     "forget_token": {
@@ -3145,7 +3145,7 @@
                                         "type": "string",
                                         "example": ""
                                     },
-                                    "password_confirmed": {
+                                    "password_confirmation": {
                                         "type": "string",
                                         "example": ""
                                     }
@@ -4173,7 +4173,7 @@
                                 "required": [
                                     "old_password",
                                     "new_password",
-                                    "new_password_confirmed"
+                                    "new_password_confirmation"
                                 ],
                                 "properties": {
                                     "old_password": {
@@ -4184,7 +4184,7 @@
                                         "type": "string",
                                         "example": ""
                                     },
-                                    "password_confirmed": {
+                                    "new_password_confirmation": {
                                         "type": "string",
                                         "example": ""
                                     }
